--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -1,13 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
+    <string name="app_name" translatable="false">LSPosed Manager</string>
     <string name="Activated">已啟用</string>
     <string name="Install">安裝</string>
-    <string name="InstallDetail">點按安裝 LSPosed</string>
+    <string name="InstallDetail">點選安裝 LSPosed</string>
     <string name="Modules">模組</string>
     <string name="ModulesDetail">%d 模組已啟用</string>
     <string name="Logs">日誌</string>
     <string name="Settings">設定</string>
     <string name="About">關於</string>
+    
     <!-- General/various strings -->
     <string name="menuSend">傳送</string>
     <string name="menuSaveToSd">儲存</string>
@@ -29,12 +30,12 @@
     <!-- Modules tab -->
     <string name="module_is_not_activated_yet">LSPosed 模組尚未啟用</string>
     <string name="module_is_not_activated_yet_detailed">%s 已安裝, 但尚未啟用</string>
-    <string name="module_empty_description">(未提供介紹)</string>
+    <string name="module_empty_description">（未提供介紹）</string>
     <string name="module_no_ui">該模組未提供使用者介面</string>
     <string name="xposed_module_updated_notification_title">LSPosed 模組已更新</string>
     <string name="warning_xposed_min_version">該模組需要更新版本的 LSPosed(%d), 因此無法被啟用</string>
     <string name="no_min_version_specified">該模組未指定所需的 LSPosed 版本</string>
-    <string name="warning_min_version_too_low">該模組針對 LSPosed %1$d 版本構建 , 由於不相容 %2$d 版本中的變更, 現已被停用</string>
+    <string name="warning_min_version_too_low">該模組針對 LSPosed %1$d 版本構建 , 由於不相容 %2$d 版本中的變更, 現在已被停用</string>
     <string name="module_app_info">程式資訊</string>
     <string name="modules_app_store">在 Play 商店檢視</string>
     <string name="module_uninstall">解除安裝</string>
@@ -45,6 +46,8 @@
     <!-- Settings tab -->
     <string name="settings_group_framework">框架</string>
     <string name="settings_theme">主題</string>
+    <string name="settings_enable_resources">啟用資源鉤子</string>
+    <string name="settings_enable_resources_summary"><b>警告: </b> 資源鉤子已被棄用</string>
     <string name="settings_theme_light">亮色</string>
     <string name="settings_theme_dark">暗色</string>
 
@@ -70,26 +73,31 @@
 
     <string name="info">資訊</string>
 
-    <string name="scroll_top">滾動到頂部</string>
+    <string name="scroll_top">滑動到最上面</string>
     <string name="loading">正在載入…</string>
     <string name="scroll_bottom">滾動到底部</string>
-    <string name="not_logcat">此處僅顯示 LSPosed 及模組相關日誌資訊\n如果您想抓取系統日誌, 可以嘗試我們的 Log Catcher Magisk 模組</string>
 
+    <string name="android_sdk" translatable="false">Android %2$s (%1$s, API %3$d)</string>
+    <string name="not_logcat">這裡是 LSPosed 框架和模組的日誌\n若您需要 Android 的 logcat，您可以嘗試我們 Log Catcher 的 Magisk 模組</string>
+
+    <string name="done">Done!</string>
     <!-- LSPd related -->
     <string name="compile_speed_msg">最佳化中…</string>
-    <string name="done">完成！</string>
 
-    <string name="pref_title_disable_verbose_log">禁用詳細日誌</string>
+
+    <string name="about_source" translatable="false">https://github.com/LSPosed/LSPosed/</string>
+
+    <string name="group_telegram_channel_link" translatable="false">http://t.me/LSPosed</string>
+    <string name="pref_title_disable_verbose_log">停用詳細日誌</string>
     <string name="logs_cannot_read">無法讀取日誌: \n</string>
     <string name="app_launch">執行</string>
     <string name="compile_failed">最佳化失敗或返回值為空</string>
     <string name="compile_failed_with_info">最佳化失敗: </string>
     <string name="not_installed">未安裝</string>
-    <string name="pref_title_disable_modules_log">禁用模組日誌</string>
-    <string name="pref_disable_modules_log_summary">模組丟擲的的異常堆疊仍將正常抓取</string>
+    <string name="pref_title_disable_modules_log">停用模組日誌</string>
+    <string name="pref_disable_modules_log_summary">模組產生的的異常堆疊仍將正常抓取</string>
     <string name="follow_system">跟隨系統</string>
     <string name="pure_black_dark_theme">使用純黑深色主題</string><![CDATA[>
-
     ]]>
     <string name="transparent_status_bar">透明狀態列</string>
     <string name="sort_by_name">程式名稱</string>
@@ -102,16 +110,14 @@
     <string name="sort_by_update_time_reverse">更新時間（降序）</string>
     <string name="primary_color">主要色</string>
     <string name="accent_color">強調色</string>
-    <string name="colorized_action_bar">著色應用欄</string>
+    <string name="colorized_action_bar">著色應用程式欄位</string>
     <string name="settings_group_theme">主題</string>
     <string name="material_design_2">慘白設計</string>
-    <string name="settings_enable_resources">啟用資源鉤子</string>
-    <string name="settings_enable_resources_summary"><b>警告: </b> 資源鉤子已被棄用</string>
     <string name="settings_variant">變體</string>
     <string name="menu_show_system_apps">系統程式</string>
     <string name="menu_sort">排序…</string>
     <string name="enable_module">啟用模組</string>
-    <string name="no_scope_selected">未選擇任何程式。繼續？</string>
+    <string name="no_scope_selected">未選擇任何程式。是否繼續？</string>
     <string name="menu_show_games">遊戲</string>
     <string name="menu_show_modules">模組</string>
     <string name="failed_to_save_scope_list">作用域列表儲存失敗</string>
@@ -119,13 +125,24 @@
     <string name="app_description">%s\n版本：%s</string>
     <string name="use_recommended">推薦程式</string>
     <string name="no_scope_selected_has_recommended">未選擇任何程式。選擇推薦的程式？</string>
-    <string name="use_recommended_message">選擇推薦的程式?</string>
+    <string name="use_recommended_message">選擇推薦的程式？</string>
     <string name="requested_by_module">推薦的程式</string>
-    <string name="module_disabled_no_selection">由於未選擇任何程式，模組 %s 已被禁用。</string>
+    <string name="module_disabled_no_selection">由於未選擇任何程式，模組 %s 已被停用。</string>
     <string name="android_framework">系統框架</string>
-    <string name="app_destroyed">此應用程式已被損壞，請確保您從官方來源下載該應用程式。</string>
+    <string name="app_destroyed">此應用程式已損毀，請確保您從官方來源下載該應用程式。</string>
     <string name="compile_speed">重新最佳化</string>
     <string name="selinux_permissive">&lt;b&gt;警告：&lt;\/b&gt;SELinux 未處於嚴格模式！對此進行攻擊的惡意程式可以完全控制你的裝置，並可能造成你的財產損失和法律責任。</string>
     <string name="selinux_permissive_summary">SELinux 未處於嚴格模式！</string>
-    <string name="outdated_manager">LSPosed Manager 和 LSPosed Core 的版本不一致。請重新安裝對應的版本。</string>
+    <string name="outdated_manager">LSPosed Manager 和 LSPosed 核心的版本不一致。請重新安裝對應的版本。</string>
+    <string name="lsposed_not_active">LSPosed 未正確安裝或啟用。</string>
+    <string name="settings_backup_and_restore">備份與還原</string>
+    <string name="settings_backup_and_restore_summery">備份或還原模組列表和範圍清單。</string>
+    <string name="settings_backup">備份</string>
+    <string name="settings_backuping">備份中…</string>
+    <string name="settings_backup_success">備份完成！</string>
+    <string name="settings_backup_failed">備份失敗</string>
+    <string name="settings_restore">還原</string>
+    <string name="settings_restoring">還原中…</string>
+    <string name="settings_restore_success">還原成功！</string>
+    <string name="settings_restore_failed">還原失敗</string>
 </resources>
