[app] Update notification util (#94)
Open app list instead of module list

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -138,4 +138,5 @@
     <string name="menu_backup_and_restore">备份…</string>
     <string name="menu_backup">备份</string>
     <string name="menu_restore">恢复</string>
+    <string name="xposed_module_updated_notification_content">%s 已更新</string>
 </resources>
