[app] Show snackbar for compiling result (#96)

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -139,4 +139,5 @@
     <string name="menu_backup">备份</string>
     <string name="menu_restore">恢复</string>
     <string name="xposed_module_updated_notification_content">%s 已更新</string>
+    <string name="compile_done">优化完成</string>
 </resources>
