--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -14,8 +14,6 @@
     <string name="android_sdk">Android %2$s (%1$s, API %3$d)</string>
     <string name="app_destroyed">Ця програма припинила роботу, будь ласка, переконайтесь, що завантажили її з офіційного джерела.</string>
     <string name="app_launch">Запустити</string>
-    <string name="app_name">LSPosed Manager</string>
-    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
     <string name="colorized_action_bar">Кольоровий ActionBar</string>
     <string name="compile_failed">Помилка оптимізації або повернене значення порожнє</string>
     <string name="compile_failed_with_info">Помилка оптимізації:</string>
@@ -47,7 +45,7 @@
     <string name="menu_show_games">Ігри</string>
     <string name="menu_show_modules">Модулі</string>
     <string name="menu_show_system_apps">Системні програми</string>
-    <string name="menu_sort">Сортування...</string>
+    <string name="menu_sort">Сортування…</string>
     <string name="module_app_info">Інформація про програму</string>
     <string name="module_disabled_no_selection">Модуль %s вимкнено, оскільки жодна програма не вибрана.</string>
     <string name="module_empty_description">(опису не надано)</string>
@@ -65,7 +63,6 @@
     <string name="no_scope_selected_has_recommended">Ви не вибрали жодної програми. Вибрати рекомендовані програми?</string>
     <string name="not_installed">Не встановлено</string>
     <string name="not_logcat">"Це звіт LSPosed Framework та модулів, якщо вам потрібен Android logcat, ви можете спробувати наш модуль Magisk Log Catcher"</string>
-    <string name="ok">OK</string>
     <string name="outdated_manager">Версія LSPosed Manager і LSPosed Core не узгоджуються. Будь ласка, встановіть відповідну версію.</string>
     <string name="pref_title_disable_verbose_log">Вимкнути детальні звіти</string>
     <string name="primary_color">Основний колір</string>
