--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -81,20 +81,16 @@
 
     <!-- LSPd related -->
     <string name="compile_speed_msg">最佳化中…</string>
+    <string name="compile_done">最佳化完成</string>
 
-
-    <string name="about_source" translatable="false">https://github.com/LSPosed/LSPosed/</string>
-
-    <string name="group_telegram_channel_link" translatable="false">http://t.me/LSPosed</string>
     <string name="pref_title_disable_verbose_log">停用詳細日誌</string>
     <string name="logs_cannot_read">無法讀取日誌: \n</string>
     <string name="app_launch">執行</string>
     <string name="compile_failed">最佳化失敗或返回值為空</string>
     <string name="compile_failed_with_info">最佳化失敗: </string>
     <string name="not_installed">未安裝</string>
+    <string name="pure_black_dark_theme">使用純黑深色主題</string>
     <string name="follow_system">跟隨系統</string>
-    <string name="pure_black_dark_theme">使用純黑深色主題</string><![CDATA[>
-    ]]>
     <string name="transparent_status_bar">透明狀態列</string>
     <string name="sort_by_name">程式名稱</string>
     <string name="sort_by_name_reverse">程式名稱（降序）</string>
@@ -141,4 +137,8 @@
     <string name="settings_restoring">還原中…</string>
     <string name="settings_restore_success">還原成功！</string>
     <string name="settings_restore_failed">還原失敗</string>
+    <string name="menu_backup_and_restore">備份…</string>
+    <string name="menu_backup">備份</string>
+    <string name="menu_restore">還原</string>
+    <string name="xposed_module_updated_notification_content">%s 已更新</string>
 </resources>
