--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,4 +150,8 @@
     <string name="module_repo_summary">repository</string>
     <string name="module_readme">Readme</string>
     <string name="module_releases">Releases</string>
+    <string name="module_information">Info</string>
+    <string name="module_information_homepage">Homepage</string>
+    <string name="module_information_source_url">Source code</string>
+    <string name="module_information_collaborators">Collaborators</string>
 </resources>
