[app] Open module in browser

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -155,5 +155,5 @@
     <string name="module_information_source_url">Source code</string>
     <string name="module_information_collaborators">Collaborators</string>
     <string name="module_release_view_assets">Assets</string>
-    <string name="module_release_open_browser">Open in…</string>
+    <string name="menu_open_in_browser">Open in browser</string>
 </resources>
