--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -146,8 +146,8 @@
     <string name="menu_backup">Backup</string>
     <string name="menu_restore">Restore</string>
     <string name="xposed_module_updated_notification_content">%s has been updated</string>
-    <string name="module_repo">Module repository</string>
-    <string name="module_repo_summary">repository</string>
+    <string name="module_repo">Repository</string>
+    <string name="module_repo_summary">Module repository</string>
     <string name="module_readme">Readme</string>
     <string name="module_releases">Releases</string>
     <string name="module_information">Info</string>
